--- a/transfer.ipynb
+++ b/transfer.ipynb
@@ -32,6 +32,7 @@
     "from torchvision.transforms.functional import to_pil_image\n",
     "import matplotlib.pyplot as plt\n",
     "import torch.hub\n",
+    "from tqdm import tqdm\n",
     "\n",
     "cudnn.benchmark = True\n",
     "plt.ion()"
@@ -142,7 +143,7 @@
     "training_losses = []\n",
     "epochs = range(1, num_epochs + 1)\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
+    "for epoch in tqdm(range(num_epochs)):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
     "    for inputs, labels in train_loader:\n",
